// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Movies /> when movies exist and is not empty should render correctly 1`] = `
<div>
  <div
    class="MuiGrid-root css-1nx1jcs-MuiGrid-root-Container-wrapper"
  >
    <div
      class="MuiBox-root css-1pj0buh-StyledBox-wrapper"
    >
      <div
        class="MuiFormControl-root MuiTextField-root css-1mj6qlk-MuiFormControl-root-MuiTextField-root-StyledTextField-wrapper"
      >
        <div
          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r2:"
            placeholder="Enter Text Here"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-hdw1oc"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <button
        class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-1qhs0lv-MuiButtonBase-root-MuiIconButton-root-StyledButton-root"
        data-testid="btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vr54bh-MuiSvgIcon-root-StyledSearchIcon-root"
          data-testid="SearchIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1yk6gh-MuiGrid-root-StyledGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 css-1557hwu-MuiGrid-root-StytledGrid-wrapper"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-qegifv-MuiPaper-root-MuiCard-root-StyledCard-wrapper"
        >
          <img
            alt="movie-poster"
            class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            height="250"
            src="Mock Poster"
          />
          <div
            class="MuiCardContent-root css-1189jzg-MuiCardContent-root-StyledCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1qhct6m-MuiTypography-root-StyledButton-root"
            >
              Mock Title
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Movies /> when movies is empty  should render correctly 1`] = `
<div>
  <div
    class="MuiGrid-root css-1nx1jcs-MuiGrid-root-Container-wrapper"
  >
    <div
      class="MuiBox-root css-1pj0buh-StyledBox-wrapper"
    >
      <div
        class="MuiFormControl-root MuiTextField-root css-1mj6qlk-MuiFormControl-root-MuiTextField-root-StyledTextField-wrapper"
      >
        <div
          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r1:"
            placeholder="Enter Text Here"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-hdw1oc"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <button
        class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-1qhs0lv-MuiButtonBase-root-MuiIconButton-root-StyledButton-root"
        data-testid="btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vr54bh-MuiSvgIcon-root-StyledSearchIcon-root"
          data-testid="SearchIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1yk6gh-MuiGrid-root-StyledGrid-root"
    >
      <div
        class="MuiBox-root css-qqlyqx-StyledBox-root"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          No Movie(s) with the title "" found
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Movies /> when movies is undefined should render correctly 1`] = `
<div>
  <div
    class="MuiGrid-root css-1nx1jcs-MuiGrid-root-Container-wrapper"
  >
    <div
      class="MuiBox-root css-1pj0buh-StyledBox-wrapper"
    >
      <div
        class="MuiFormControl-root MuiTextField-root css-1mj6qlk-MuiFormControl-root-MuiTextField-root-StyledTextField-wrapper"
      >
        <div
          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r0:"
            placeholder="Enter Text Here"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-hdw1oc"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <button
        class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-1qhs0lv-MuiButtonBase-root-MuiIconButton-root-StyledButton-root"
        data-testid="btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vr54bh-MuiSvgIcon-root-StyledSearchIcon-root"
          data-testid="SearchIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1yk6gh-MuiGrid-root-StyledGrid-root"
    >
      <div
        class="MuiBox-root css-qqlyqx-StyledBox-root"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          Welcome to Our service, please type the title of the movie you would like to search for in the input field above!
        </h5>
      </div>
    </div>
  </div>
</div>
`;
